--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -25,4 +25,10 @@ jobs:
               run: npm install
             - name: Unit Testing
               run: npm test
+            - name: Archive Test Result
+              uses: actions/upload-artifact@v4.4.0
+              with:
+                name: Mocha-Test-Result
+                path: test-results.xml
+                
     
