--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -35,7 +35,7 @@ jobs:
             - name: Archive Test Result
               uses: actions/upload-artifact@v4.4.0
               with:
-                name: Mocha-Test-Result
+                name: Mocha-Test-Result-${{matrix.nodejs_version}}-${{matrix.os}}
                 path: test-results.xml
 
     
