--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -37,5 +37,26 @@ jobs:
               with:
                 name: Mocha-Test-Result-${{matrix.nodejs_version}}-${{matrix.os}}
                 path: test-results.xml
+    code-coverage:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v4
+            - name: Setup NodeJs Version - 18
+              uses: actions/setup-node@v4
+              with:
+                node-version: 18
+            - name: Install Dependencies
+              run: npm install 
+            - name: check Code Coverage
+              run: npm run coverage
+            - name: Archive Coverage Result
+              uses: actions/upload-artifact@v4.4.0
+              with:
+                name: Code Coverage Result
+                path: coverage
+                retention-days: 5
+
+
 
     
