--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -49,6 +49,7 @@ jobs:
             - name: Install Dependencies
               run: npm install 
             - name: check Code Coverage
+              continue-on-error: true
               run: npm run coverage
             - name: Archive Coverage Result
               uses: actions/upload-artifact@v4.4.0
