--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -15,7 +15,7 @@ jobs:
         name: Unit Testing
         strategy:
           matrix:
-            nodejs_version: [18,19,20]
+            nodejs_version: [18, 20]
             os: [ubuntu-latest, macos-latest]
             exclude:
               - nodejs_version: 18
@@ -31,8 +31,10 @@ jobs:
             - name: Install Dependencies
               run: npm install
             - name: Unit Testing
+              id: nodejs-unit-testing-step
               run: npm test
             - name: Archive Test Result
+              if:  ${{steps.nodejs-unit-testing-step.outcome}}=="failure" || ${{steps.nodejs-unit-testing-step.outcome}}=="success"
               uses: actions/upload-artifact@v4.4.0
               with:
                 name: Mocha-Test-Result-${{matrix.nodejs_version}}-${{matrix.os}}
