--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -34,7 +34,7 @@ jobs:
               id: nodejs-unit-testing-step
               run: npm test
             - name: Archive Test Result
-              if: ${{failure()}} && (${{steps.nodejs-unit-testing-step.outcome}}=="failure" || ${{steps.nodejs-unit-testing-step.outcome}}=="success")
+              if: always()
               uses: actions/upload-artifact@v4.4.0
               with:
                 name: Mocha-Test-Result-${{matrix.nodejs_version}}-${{matrix.os}}
