--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -28,6 +28,11 @@ jobs:
               uses: actions/setup-node@v4
               with:
                 node-version: ${{matrix.nodejs_version}}
+            - name: Cache NPM dependencies
+              uses: actions/cache@v4.0.2
+              with:
+                path: node_modules
+                key: ${{runner.os}}-node-modules-${{hashFiles('package-lock.json')}}
             - name: Install Dependencies
               run: npm install
             - name: Unit Testing
@@ -48,6 +53,11 @@ jobs:
               uses: actions/setup-node@v4
               with:
                 node-version: 18
+            - name: Cache NPM dependencies
+              uses: actions/cache@v4.0.2
+              with:
+                  path: node_modules
+                  key: ${{runner.os}}-node-modules-${{hashFiles('package-lock.json')}}
             - name: Install Dependencies
               run: npm install 
             - name: check Code Coverage
