--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -58,7 +58,7 @@ jobs:
               with:
                   path: node_modules
                   key: ${{runner.os}}-node-modules-${{hashFiles('package-lock.json')}}
-                  
+
             - name: Install Dependencies
               run: npm install 
             - name: check Code Coverage
@@ -70,7 +70,19 @@ jobs:
                 name: Code Coverage Result
                 path: coverage
                 retention-days: 5
-
+    docker:
+        name: Containerization
+        runs-on: ubuntu-latest
+        needs: [unit-testing, code-coverage]
+        steps:
+          - name: Checkout Repo
+            uses: actions/checkout@v4
+            
+          - name: Dockerhub Login
+            uses: docker/login-action@v3.3.0
+            with:
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
 
     
