--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -84,5 +84,24 @@ jobs:
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-
+          - name: Build Build For Testing
+            uses: docker/build-push-action@v6.7.0
+            with:
+              context: .
+              push: false
+              tags: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+          - name: Docker Image Testing
+            run: |
+                docker images
+                docker run --name solar-system-app .d \
+                -p 3000:3000 \
+                -e MONGO_URI=$MONGO_URI
+                -e MONGO_USERNAME=$MONGO_USERNAME \
+                -e MONGO_PASSWORD=$MONGO_PASSWORD \
+                ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+                
+                export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddres}}{{end}}' solar-system-app)
+                echo $IP
+                echo Testing Image URL using wget
+                wget -q -O - 127.0.0.1:3000/live | grep live
     
