--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -16,7 +16,7 @@ jobs:
         strategy:
           matrix:
             nodejs_version: [18, 20]
-            os: [ubuntu-latest, macos-latest]
+            os: [ubuntu-latest]
             exclude:
               - nodejs_version: 18
                 os: macos-latest
@@ -93,12 +93,15 @@ jobs:
           - name: Docker Image Testing
             run: |
                 docker images
-                docker run --name solar-system-app .d \
+                docker run --name solar-system-app -d \
                 -p 3000:3000 \
                 -e MONGO_URI=$MONGO_URI
                 -e MONGO_USERNAME=$MONGO_USERNAME \
                 -e MONGO_PASSWORD=$MONGO_PASSWORD \
                 ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+                
+                export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddres}}{{end}}' solar-system-app)
+                echo $IP
                 echo Testing Image URL using wget
                 wget -q -O - 127.0.0.1:3000/live | grep live
     
