--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -90,6 +90,12 @@ jobs:
               context: .
               push: false
               tags: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+              
+          - name: Debug Secrets
+            run: |
+                echo "DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}"
+                echo "SHA: ${{ github.sha }}"
+            
           - name: Docker Image Testing
             run: |
                 docker images
@@ -98,7 +104,7 @@ jobs:
                 -e MONGO_URI=$MONGO_URI
                 -e MONGO_USERNAME=$MONGO_USERNAME \
                 -e MONGO_PASSWORD=$MONGO_PASSWORD \
-                ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+                '${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}'
                 
                 export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddres}}{{end}}' solar-system-app)
                 echo $IP
