--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -90,7 +90,7 @@ jobs:
               context: .
               push: false
               tags: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
-              
+
           - name: Debug Secrets
             run: |
                 echo "DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}"
@@ -101,10 +101,10 @@ jobs:
                 docker images
                 docker run --name solar-system-app -d \
                 -p 3000:3000 \
-                -e MONGO_URI=$MONGO_URI
+                -e MONGO_URI=$MONGO_URI \
                 -e MONGO_USERNAME=$MONGO_USERNAME \
                 -e MONGO_PASSWORD=$MONGO_PASSWORD \
-                '${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}'
+                "${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}"
                 
                 export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddres}}{{end}}' solar-system-app)
                 echo $IP
