--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -106,8 +106,13 @@ jobs:
                 -e MONGO_PASSWORD=$MONGO_PASSWORD \
                 "${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}"
                 
-                export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddres}}{{end}}' solar-system-app)
+                export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
                 echo $IP
                 echo Testing Image URL using wget
                 wget -q -O - 127.0.0.1:3000/live | grep live
-    
+          - name: Docker Push
+            uses: docker/build-push-action@v6.7.0
+            with:
+                context: .
+                push: true
+                tags: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
