--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -83,6 +83,12 @@ jobs:
             with:
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          - name: Github Container Registry Login
+            uses: docker/login-action@v3.3.0
+            with:
+                registry: ghcr.io
+                username: ${{ github.repository_owner }}
+                password: ${{ secrets.GITHUB_TOKEN }}
 
           - name: Build Build For Testing
             uses: docker/build-push-action@v6.7.0
@@ -90,11 +96,6 @@ jobs:
               context: .
               push: false
               tags: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
-
-          - name: Debug Secrets
-            run: |
-                echo "DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}"
-                echo "SHA: ${{ github.sha }}"
             
           - name: Docker Image Testing
             run: |
@@ -110,9 +111,11 @@ jobs:
                 echo $IP
                 echo Testing Image URL using wget
                 wget -q -O - 127.0.0.1:3000/live | grep live
-          - name: Docker Push
+          - name: Container Registry Push
             uses: docker/build-push-action@v6.7.0
             with:
                 context: .
                 push: true
-                tags: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+                tags: |
+                    ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+                    ghcr.io/${{github.repository_owner}}/solar-system:${{github.sha}}
