--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -120,4 +120,4 @@ jobs:
                 push: true
                 tags: |
                     ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
-                    ghcr.io/${{github.repository_owner}}/solar-system:${{github.sha}}
+                    ghcr.io/faresgabsi/solar-system:${{github.sha}}
