--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -55,13 +55,26 @@ jobs:
                 path: test-results.xml
     code-coverage:
         runs-on: ubuntu-latest
+        container: 
+          image: node:18
+        services:
+            mongo-db:
+              image: siddharth67/mongo-db:non-prod
+              options: 
+                --name mongo
+              ports:
+                - 27017:27017
+        env:
+            MONGO_URI: 'mongodb://mongo:27017/superData'
+            MONGO_USERNAME: non-prod-user
+            MONGO_PASSWORD: non-prod-password 
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v4
-            - name: Setup NodeJs Version - 18
-              uses: actions/setup-node@v4
-              with:
-                node-version: 18
+            # - name: Setup NodeJs Version - 18
+            #   uses: actions/setup-node@v4
+            #   with:
+            #     node-version: 18
             - name: Cache NPM dependencies
               uses: actions/cache@v4.0.2
               with:
