--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -143,3 +143,20 @@ jobs:
                 tags: |
                     ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
                     ghcr.io/faresgabsi/solar-system:${{github.sha}}
+    dev-deploy:
+      needs: docker
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+        - name: Install kubectl CLI
+          uses: Azure/setup-kubectl@v4.0.0
+          with:
+            version: 'v1.26.0'
+        - name: Fetch Kubernetes Cluster Details
+          run: |
+            kubectl version --short -o yaml
+            echo --------------------------------------
+            kubectl get nodes
+            
+    
