--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -177,9 +177,8 @@ jobs:
             NAMESPACE: ${{vars.NAMESPACE}}
             REPLICAS: ${{vars.REPLICAS}}
             IMAGE: ${{secrets.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
-            INGRESS_IP: ${{env.INGRESS_IP}}
+            INGRESS_IP: ${{secrets.INGRESS_IP}}
         - name: Check files
           run: |
             cat kubernetes/development/*.yaml
 
-            
